<resources>
    <string name="app_name">My Self Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="walkthrough_title_1">Welcome to My App</string>
    <string name="walkthrough_title_2">Easy to Contact</string>
    <string name="walkthrough_title_3">Enjoy My App</string>
    <string name="walkthrough_text_1">Selamat datang di aplikasi myself. Aplikasi ini dibuat oleh Agung Nurhamidan dengan NIM 10118017. Terdapat beberapa hal yang disajikan dalam aplikasi ini mengenai profil dan hal yang aku sukai.</string>
    <string name="walkthrough_text_2">Menyediakan fitur yang membuat Anda mudah untuk menghubungiku baik dari nomor telepon, email, atau social media. Semuanya bisa dilakukan dengan satu kali klik.</string>
    <string name="walkthrough_text_3">Silakan nikmati fitur-fitur yang ada dalam aplikasi ini.</string>
    <string name="home_title">Home</string>
    <string name="daily_activity_title">Daily Activity</string>
    <string name="gallery_title">Gallery</string>
    <string name="music_favorite_and_video_title">Music Favorite &amp; Video</string>
    <string name="profile_title">Profile</string>
    <string name="nim">NIM</string>
    <string name="nim_value">10118017</string>
    <string name="nama">Nama</string>
    <string name="nama_value">Agung Nurhamidan</string>
    <string name="kelas">Kelas</string>
    <string name="kelas_value">IF-1</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="jenis_kelamin_value">Laki-Laki</string>
    <string name="tempat_tanggal_lahir">Tempat Tanggal Lahir</string>
    <string name="tempat_tanggal_lahir_value">Ciamis, 08 November 1998</string>
    <string name="alamat_rumah">Alamat Rumah</string>
    <string name="alamat_rumah_value">Jl. Tubagus Ismail Raya No. 76</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="golongan_darah_value">O</string>
    <string name="makanan_kesukaan">Makanan Kesukaan</string>
    <string name="makanan_kesukaan_value">Seblak</string>
    <string name="minuman_kesukaan">Minuman Kesukaan</string>
    <string name="minuman_kesukaan_value">Jus Buah Naga</string>
    <string name="hobi">Hobi</string>
    <string name="hobi_value">Berenang</string>
    <string name="lagu_favorit">Lagu Favorit</string>
    <string name="lagu_favorit_value">Bondan Prakoso &amp; Fade 2 Black - Ya Sudahlah</string>
    <string name="film_favorit">Film Favorit</string>
    <string name="film_favorit_value">Violet Evergarden</string>
    <string name="interest_title">Interest</string>
    <string name="cita_cita">Cita-cita</string>
    <string name="cita_cita_value">Programmer</string>
</resources>